feat: updating Dockerfile