@@ -6,4 +6,4 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 COPY --from=build /app/target/restapi-0.0.1-SNAPSHOT.jar restapi.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "restapi.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","restapi.jar"]
